# api/v1/item/dto.go
@@ -5,8 +5,8 @@ import (
 )
 
 type ItemNew struct {
-	SKU             string  `json:"sku" binding:"required,min=6,max=64"`
-	Name            string  `json:"name" binding:"required,min=6,max=255"`
+	SKU             string  `json:"sku" binding:"required,min=4,max=64"`
+	Name            string  `json:"name" binding:"required,min=4,max=255"`
 	UnitID          string  `json:"unit_id" binding:"required,min=6,max=64"`
 	ManufacturerID  string  `json:"manufacturer_id" binding:"omitempty,min=6,max=64"`
 	BrandID         string  `json:"brand_id" binding:"omitempty,min=6,max=64"`
@@ -35,33 +35,35 @@ type ItemFilter struct {
 }
 
 type ItemResponse struct {
-	ItemID           string  `db:"item_id" json:"item_id"`
-	OrganizationID   string  `db:"organization_id" json:"organization_id"`
-	SKU              string  `db:"sku" json:"sku"`
-	Name             string  `db:"name" json:"name"`
-	UnitID           string  `db:"unit_id" json:"unit_id"`
-	UnitName         string  `db:"unit_name" json:"unit_name"`
-	ManufacturerID   string  `db:"manufacturer_id" json:"manufacturer_id"`
-	ManufacturerName string  `db:"manufacturer_name" json:"manufacturer_name"`
-	BrandID          string  `db:"brand_id" json:"brand_id"`
-	BrandName        string  `db:"brand_name" json:"brand_name"`
-	WeightUnit       string  `db:"weight_unit" json:"weight_unit"`
-	Weight           float64 `db:"weight" json:"weight"`
-	DimensionUnit    string  `db:"dimension_unit" json:"dimension_unit"`
-	Length           float64 `db:"length" json:"length"`
-	Width            float64 `db:"width" json:"width"`
-	Height           float64 `db:"height" json:"height"`
-	SellingPrice     float64 `db:"selling_price" json:"selling_price"`
-	CostPrice        float64 `db:"cost_price" json:"cost_price"`
-	ReorderStock     int     `db:"reorder_stock" json:"reorder_stock"`
-	StockOnHand      int     `db:"stock_on_hand" json:"stock_on_hand"`
-	StockAvailable   int     `db:"stock_available" json:"stock_available"`
-	StockPicking     int     `db:"stock_picking" json:"stock_picking"`
-	StockPacking     int     `db:"stock_packing" json:"stock_packing"`
-	DefaultVendorID  string  `db:"default_vendor_id" json:"default_vendor_id"`
-	Description      string  `db:"description" json:"description"`
-	TrackLocation    int     `db:"track_location" json:"track_location"`
-	Status           int     `db:"status" json:"status"`
+	ItemID            string  `db:"item_id" json:"item_id"`
+	OrganizationID    string  `db:"organization_id" json:"organization_id"`
+	SKU               string  `db:"sku" json:"sku"`
+	Name              string  `db:"name" json:"name"`
+	UnitID            string  `db:"unit_id" json:"unit_id"`
+	UnitName          string  `db:"unit_name" json:"unit_name"`
+	ManufacturerID    string  `db:"manufacturer_id" json:"manufacturer_id"`
+	ManufacturerName  string  `db:"manufacturer_name" json:"manufacturer_name"`
+	BrandID           string  `db:"brand_id" json:"brand_id"`
+	BrandName         string  `db:"brand_name" json:"brand_name"`
+	WeightUnit        string  `db:"weight_unit" json:"weight_unit"`
+	WeightUnitName    string  `db:"weight_unit_name" json:"weight_unit_name"`
+	Weight            float64 `db:"weight" json:"weight"`
+	DimensionUnit     string  `db:"dimension_unit" json:"dimension_unit"`
+	DimensionUnitName string  `db:"dimension_unit_name" json:"dimension_unit_name"`
+	Length            float64 `db:"length" json:"length"`
+	Width             float64 `db:"width" json:"width"`
+	Height            float64 `db:"height" json:"height"`
+	SellingPrice      float64 `db:"selling_price" json:"selling_price"`
+	CostPrice         float64 `db:"cost_price" json:"cost_price"`
+	ReorderStock      int     `db:"reorder_stock" json:"reorder_stock"`
+	StockOnHand       int     `db:"stock_on_hand" json:"stock_on_hand"`
+	StockAvailable    int     `db:"stock_available" json:"stock_available"`
+	StockPicking      int     `db:"stock_picking" json:"stock_picking"`
+	StockPacking      int     `db:"stock_packing" json:"stock_packing"`
+	DefaultVendorID   string  `db:"default_vendor_id" json:"default_vendor_id"`
+	Description       string  `db:"description" json:"description"`
+	TrackLocation     int     `db:"track_location" json:"track_location"`
+	Status            int     `db:"status" json:"status"`
 }
 
 type ItemID struct {
